// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Disktop Container should render Desktop cont correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
        id="galery"
      >
        <div
          class="item"
        >
          <img
            alt=""
            class="image"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            sizes="100vw"
            src="/_next/image?url=%2Fimages%2Farh_1.jpg&w=3840&q=75"
            srcset="/_next/image?url=%2Fimages%2Farh_1.jpg&w=640&q=75 640w, /_next/image?url=%2Fimages%2Farh_1.jpg&w=750&q=75 750w, /_next/image?url=%2Fimages%2Farh_1.jpg&w=828&q=75 828w, /_next/image?url=%2Fimages%2Farh_1.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Farh_1.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Farh_1.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Farh_1.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Farh_1.jpg&w=3840&q=75 3840w"
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </div>
      </div>
      <div
        class="container"
      >
        <div
          class="effect"
        >
          <div
            class="commingSoonDesktop"
            id="comingsoon"
          >
            Coming Soon!
          </div>
        </div>
        <div
          class="container"
        >
          <div
            class="brand"
          >
            Horea's Photography
             
          </div>
          <div
            class="categoryGroup"
          >
            <div
              class="text textUnblur"
              data-id="black&white"
              data-index="0"
              id="black&white"
            >
              Black & White
            </div>
            <div
              class="text "
              data-id="landscape"
              data-index="1"
              id="landscape"
            >
              Landscape
            </div>
            <div
              class="text "
              data-id="people&cities"
              data-index="2"
              id="people&cities"
            >
              People and cities
            </div>
          </div>
          <div
            class="contact"
          >
            <p>
              constandacheh@gmail.com
            </p>
            <div>
              <a
                class="link"
                href="https://www.instagram.com/cypher_mercurius/"
                target="_blank"
              >
                <img
                  alt="instagram logo"
                  data-nimg="1"
                  decoding="async"
                  height="20"
                  loading="lazy"
                  src="/icons/insta_white.svg"
                  style="color: transparent;"
                  width="20"
                />
              </a>
              <a
                class="link"
                href="https://github.com/MercurA"
                target="_blank"
              >
                <img
                  alt="github logo"
                  data-nimg="1"
                  decoding="async"
                  height="20"
                  loading="lazy"
                  src="/icons/github_white.svg"
                  style="color: transparent;"
                  width="20"
                />
              </a>
              <a
                class="link"
                href="https://soundcloud.com/dionis5"
                target="_blank"
              >
                <img
                  alt="github logo"
                  data-nimg="1"
                  decoding="async"
                  height="20"
                  loading="lazy"
                  src="/_next/image?url=%2Ficons%2Fsoundcloud.jpg&w=48&q=75"
                  srcset="/_next/image?url=%2Ficons%2Fsoundcloud.jpg&w=32&q=75 1x, /_next/image?url=%2Ficons%2Fsoundcloud.jpg&w=48&q=75 2x"
                  style="color: transparent;"
                  width="20"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
      id="galery"
    >
      <div
        class="item"
      >
        <img
          alt=""
          class="image"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          sizes="100vw"
          src="/_next/image?url=%2Fimages%2Farh_1.jpg&w=3840&q=75"
          srcset="/_next/image?url=%2Fimages%2Farh_1.jpg&w=640&q=75 640w, /_next/image?url=%2Fimages%2Farh_1.jpg&w=750&q=75 750w, /_next/image?url=%2Fimages%2Farh_1.jpg&w=828&q=75 828w, /_next/image?url=%2Fimages%2Farh_1.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Farh_1.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Farh_1.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Farh_1.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Farh_1.jpg&w=3840&q=75 3840w"
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
        />
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="effect"
      >
        <div
          class="commingSoonDesktop"
          id="comingsoon"
        >
          Coming Soon!
        </div>
      </div>
      <div
        class="container"
      >
        <div
          class="brand"
        >
          Horea's Photography
           
        </div>
        <div
          class="categoryGroup"
        >
          <div
            class="text textUnblur"
            data-id="black&white"
            data-index="0"
            id="black&white"
          >
            Black & White
          </div>
          <div
            class="text "
            data-id="landscape"
            data-index="1"
            id="landscape"
          >
            Landscape
          </div>
          <div
            class="text "
            data-id="people&cities"
            data-index="2"
            id="people&cities"
          >
            People and cities
          </div>
        </div>
        <div
          class="contact"
        >
          <p>
            constandacheh@gmail.com
          </p>
          <div>
            <a
              class="link"
              href="https://www.instagram.com/cypher_mercurius/"
              target="_blank"
            >
              <img
                alt="instagram logo"
                data-nimg="1"
                decoding="async"
                height="20"
                loading="lazy"
                src="/icons/insta_white.svg"
                style="color: transparent;"
                width="20"
              />
            </a>
            <a
              class="link"
              href="https://github.com/MercurA"
              target="_blank"
            >
              <img
                alt="github logo"
                data-nimg="1"
                decoding="async"
                height="20"
                loading="lazy"
                src="/icons/github_white.svg"
                style="color: transparent;"
                width="20"
              />
            </a>
            <a
              class="link"
              href="https://soundcloud.com/dionis5"
              target="_blank"
            >
              <img
                alt="github logo"
                data-nimg="1"
                decoding="async"
                height="20"
                loading="lazy"
                src="/_next/image?url=%2Ficons%2Fsoundcloud.jpg&w=48&q=75"
                srcset="/_next/image?url=%2Ficons%2Fsoundcloud.jpg&w=32&q=75 1x, /_next/image?url=%2Ficons%2Fsoundcloud.jpg&w=48&q=75 2x"
                style="color: transparent;"
                width="20"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Disktop Container should render Desktop cont correctly 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="menuContainer undefined"
      >
        <div
          class="menuWrapper"
        >
          <div
            class="slideMenuBtn"
          >
            <span />
            <span />
            <span />
          </div>
          <div
            class="brandTitle"
          >
            <strong>
              Horea's
            </strong>
             Photography
          </div>
        </div>
        <div
          class="drawer drawerClosed"
        >
          <div
            class="drawerHeader"
          >
            <button
              class="drawerCloseBtn"
            >
              <img
                alt="close icon"
                data-nimg="1"
                decoding="async"
                height="15"
                loading="lazy"
                src="/icons/close.svg"
                style="color: transparent;"
                width="15"
              />
            </button>
          </div>
          <div
            class="drawerBody"
          >
            <div
              class="drawerItem"
              data-id="black&white"
            >
              Black & White
            </div>
            <div
              class="drawerItem"
              data-id="landscape"
            >
              Landscape
            </div>
            <div
              class="drawerItem"
              data-id="people&cities"
            >
              People and cities
            </div>
          </div>
          <div
            class="drawerFooter"
          >
            <p>
              constandacheh@gmail.com
            </p>
            <div>
              <a
                class="link"
                href="https://www.instagram.com/cypher_mercurius/"
                target="_blank"
              >
                <img
                  alt="instagram logo"
                  data-nimg="1"
                  decoding="async"
                  height="20"
                  loading="lazy"
                  src="/icons/insta_white.svg"
                  style="color: transparent;"
                  width="20"
                />
              </a>
              <a
                class="link"
                href="https://github.com/MercurA"
                target="_blank"
              >
                <img
                  alt="github logo"
                  data-nimg="1"
                  decoding="async"
                  height="20"
                  loading="lazy"
                  src="/icons/github_white.svg"
                  style="color: transparent;"
                  width="20"
                />
              </a>
              <a
                class="link"
                href="https://soundcloud.com/dionis5"
                target="_blank"
              >
                <img
                  alt="github logo"
                  data-nimg="1"
                  decoding="async"
                  height="20"
                  loading="lazy"
                  src="/_next/image?url=%2Ficons%2Fsoundcloud.jpg&w=48&q=75"
                  srcset="/_next/image?url=%2Ficons%2Fsoundcloud.jpg&w=32&q=75 1x, /_next/image?url=%2Ficons%2Fsoundcloud.jpg&w=48&q=75 2x"
                  style="color: transparent;"
                  width="20"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        class="container"
      >
        <div
          class="cardWrapper"
        >
          <img
            alt=""
            class="image"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            sizes="100vw"
            src="/_next/image?url=%2Fimages%2Farh_1.jpg&w=3840&q=75"
            srcset="/_next/image?url=%2Fimages%2Farh_1.jpg&w=640&q=75 640w, /_next/image?url=%2Fimages%2Farh_1.jpg&w=750&q=75 750w, /_next/image?url=%2Fimages%2Farh_1.jpg&w=828&q=75 828w, /_next/image?url=%2Fimages%2Farh_1.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Farh_1.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Farh_1.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Farh_1.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Farh_1.jpg&w=3840&q=75 3840w"
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="menuContainer undefined"
    >
      <div
        class="menuWrapper"
      >
        <div
          class="slideMenuBtn"
        >
          <span />
          <span />
          <span />
        </div>
        <div
          class="brandTitle"
        >
          <strong>
            Horea's
          </strong>
           Photography
        </div>
      </div>
      <div
        class="drawer drawerClosed"
      >
        <div
          class="drawerHeader"
        >
          <button
            class="drawerCloseBtn"
          >
            <img
              alt="close icon"
              data-nimg="1"
              decoding="async"
              height="15"
              loading="lazy"
              src="/icons/close.svg"
              style="color: transparent;"
              width="15"
            />
          </button>
        </div>
        <div
          class="drawerBody"
        >
          <div
            class="drawerItem"
            data-id="black&white"
          >
            Black & White
          </div>
          <div
            class="drawerItem"
            data-id="landscape"
          >
            Landscape
          </div>
          <div
            class="drawerItem"
            data-id="people&cities"
          >
            People and cities
          </div>
        </div>
        <div
          class="drawerFooter"
        >
          <p>
            constandacheh@gmail.com
          </p>
          <div>
            <a
              class="link"
              href="https://www.instagram.com/cypher_mercurius/"
              target="_blank"
            >
              <img
                alt="instagram logo"
                data-nimg="1"
                decoding="async"
                height="20"
                loading="lazy"
                src="/icons/insta_white.svg"
                style="color: transparent;"
                width="20"
              />
            </a>
            <a
              class="link"
              href="https://github.com/MercurA"
              target="_blank"
            >
              <img
                alt="github logo"
                data-nimg="1"
                decoding="async"
                height="20"
                loading="lazy"
                src="/icons/github_white.svg"
                style="color: transparent;"
                width="20"
              />
            </a>
            <a
              class="link"
              href="https://soundcloud.com/dionis5"
              target="_blank"
            >
              <img
                alt="github logo"
                data-nimg="1"
                decoding="async"
                height="20"
                loading="lazy"
                src="/_next/image?url=%2Ficons%2Fsoundcloud.jpg&w=48&q=75"
                srcset="/_next/image?url=%2Ficons%2Fsoundcloud.jpg&w=32&q=75 1x, /_next/image?url=%2Ficons%2Fsoundcloud.jpg&w=48&q=75 2x"
                style="color: transparent;"
                width="20"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="cardWrapper"
      >
        <img
          alt=""
          class="image"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          sizes="100vw"
          src="/_next/image?url=%2Fimages%2Farh_1.jpg&w=3840&q=75"
          srcset="/_next/image?url=%2Fimages%2Farh_1.jpg&w=640&q=75 640w, /_next/image?url=%2Fimages%2Farh_1.jpg&w=750&q=75 750w, /_next/image?url=%2Fimages%2Farh_1.jpg&w=828&q=75 828w, /_next/image?url=%2Fimages%2Farh_1.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimages%2Farh_1.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimages%2Farh_1.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimages%2Farh_1.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimages%2Farh_1.jpg&w=3840&q=75 3840w"
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
